<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back_gradient"
    android:paddingLeft="@dimen/layout_padding_lr"
    android:paddingTop="@dimen/layout_padding_lr"
    android:paddingRight="@dimen/layout_padding_tb"
    android:paddingBottom="@dimen/layout_padding_tb">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_header"
        android:id="@+id/textView4"
        android:layout_gravity="center_horizontal"
        android:textSize="25dp"
        android:visibility="invisible"
        android:layout_marginBottom="@dimen/header_margin_botton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/account_text_success"
        android:id="@+id/textView5"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/signin_text_margin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/form_margin_lr"
        android:layout_marginRight="@dimen/form_margin_lr" >

        <EditText
            android:id="@+id/account_edit_userid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account_edit_userid"
            android:inputType="number"
            android:layout_marginBottom="@dimen/form_margin_botton" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/account_text_account" />

        <EditText
            android:id="@+id/account_edit_accountid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account_edit_accountid"
            android:inputType="number"
            android:layout_marginBottom="@dimen/form_margin_botton" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/account_spinner_accountid"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/account_button_signout"
                android:text="@string/account_button_signout"
                android:onClick="onSignout" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/account_button_order"
                android:layout_alignParentRight="true"
                android:text="@string/account_button_order"
                android:onClick="onOrder" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
