<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/signup_layout"
    android:orientation="vertical"
    android:background="@drawable/back_gradient"
    android:paddingLeft="@dimen/layout_padding_lr"
    android:paddingTop="@dimen/layout_padding_lr"
    android:paddingRight="@dimen/layout_padding_tb"
    android:paddingBottom="@dimen/layout_padding_tb">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/form_margin_lr"
            android:layout_marginRight="@dimen/form_margin_lr"
            android:layout_marginTop="20dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signup_edit_email"
                android:hint="@string/signup_edit_email"
                android:singleLine="true"
                android:layout_marginBottom="@dimen/form_margin_botton" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signup_edit_password"
                android:hint="@string/signup_edit_password"
                android:layout_marginBottom="@dimen/form_margin_botton"
                android:singleLine="true"
                android:inputType="textPassword"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signup_edit_retype"
                android:hint="@string/signup_edit_retype"
                android:singleLine="true"
                android:inputType="textPassword"
                android:layout_marginBottom="@dimen/form_margin_botton" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signup_spinner_type"
                android:prompt="@string/signup_spinner_prompt"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signup_edit_userid"
                android:hint="@string/signup_edit_userid"
                android:visibility="gone"
                android:inputType="number"
                android:layout_marginBottom="@dimen/form_margin_botton"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signup_accounts_layout"
                android:orientation="vertical">
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/signup_button_plus"
                    android:text="+"
                    android:textStyle="bold"
                    android:layout_gravity="left"
                    android:visibility="gone"
                    android:onClick="onAddAccount"/>
                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/signup_button_minus"
                    android:text="-"
                    android:textStyle="bold"
                    android:layout_gravity="left"
                    android:visibility="gone"
                    android:onClick="onRemoveAccount"/>
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signup_button_signup"
                android:text="@string/signup_button_signup"
                android:onClick="onSignup"/>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:id="@+id/signup_button_signin"
                android:text="@string/signup_button_signin"
                android:layout_gravity="right"
                android:onClick="onSignin1"
                android:visibility="invisible"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
