<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vendormax.web.orderapp.TabOrderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tab_order_text_purchase"/>

            <EditText
                android:id="@+id/tab_order_edit_purchase"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:singleLine="true"/>
        </LinearLayout>

        <Button
            android:id="@+id/tab_order_button_confirm_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tab_order_button_confirm_order"
            android:enabled="false"/>

        <EditText
            android:id="@+id/tab_order_edit_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tab_product_edit_search"
            android:singleLine="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/order_header_supplier"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Supplier"
                android:gravity="center"/>

            <TextView
                android:id="@+id/order_header_description"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Description"
                android:gravity="center"/>

            <TextView
                android:id="@+id/order_header_quantity"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Quantity"
                android:gravity="center"/>
        </LinearLayout>

        <ListView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/listView"
            android:descendantFocusability="beforeDescendants"/>
    </LinearLayout>

</FrameLayout>
